Removing FileResource and FileResourceMimeType tables & references. Updating API environment variables (removing tenancy-related fields and hardcoding instead); matching new values to qa & prod configmaps.
