# Nebula.EFModels/Entities/Generated/ExtensionMethods/FileResource.Binding.cs
@@ -1,11 +1,0 @@
-//  IMPORTANT:
-//  This file is generated. Your changes will be lost.
-//  Use the corresponding partial class for customizations.
-//  Source Table: [dbo].[FileResource]
-namespace Nebula.EFModels.Entities
-{
-    public partial class FileResource
-    {
-        public FileResourceMimeType FileResourceMimeType => FileResourceMimeType.AllLookupDictionary[FileResourceMimeTypeID];
-    }
-}
