# Nebula.Models/DataTransferObjects/Generated/FileResourceDto.cs
@@ -1,34 +1,0 @@
-//  IMPORTANT:
-//  This file is generated. Your changes will be lost.
-//  Use the corresponding partial class for customizations.
-//  Source Table: [dbo].[FileResource]
-using System;
-
-
-namespace Nebula.Models.DataTransferObjects
-{
-    public partial class FileResourceDto
-    {
-        public int FileResourceID { get; set; }
-        public FileResourceMimeTypeDto FileResourceMimeType { get; set; }
-        public string OriginalBaseFilename { get; set; }
-        public string OriginalFileExtension { get; set; }
-        public Guid FileResourceGUID { get; set; }
-        public byte[] FileResourceData { get; set; }
-        public UserDto CreateUser { get; set; }
-        public DateTime CreateDate { get; set; }
-    }
-
-    public partial class FileResourceSimpleDto
-    {
-        public int FileResourceID { get; set; }
-        public System.Int32 FileResourceMimeTypeID { get; set; }
-        public string OriginalBaseFilename { get; set; }
-        public string OriginalFileExtension { get; set; }
-        public Guid FileResourceGUID { get; set; }
-        public byte[] FileResourceData { get; set; }
-        public System.Int32 CreateUserID { get; set; }
-        public DateTime CreateDate { get; set; }
-    }
-
-}
